--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,15 @@
+*.iml
 .gradle
 /local.properties
+/.idea/caches/build_file_checksums.ser
+/.idea/libraries
+/.idea/modules.xml
 /.idea/workspace.xml
 .DS_Store
+/build
+/captures
+.externalNativeBuild
+.gradle
+.idea
+/app/build
+*.class
